--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+set -g mouse on
 set-window-option -g xterm-keys on
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
