--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ bind l select-pane -R
 
 set -g mouse on
 set-window-option -g xterm-keys on
+set -g default-terminal "xterm"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -19,3 +20,5 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
