--- a/tmux.conf
+++ b/tmux.conf
@@ -21,4 +21,4 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf
+source /usr/share/powerline/bindings/tmux/powerline.conf
