--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,8 @@ bind l select-pane -R
 
 set -g mouse on
 set-window-option -g xterm-keys on
-set -g default-terminal "xterm"
+#set -g default-terminal "xterm"
+set-option -g default-terminal "screen-256color"
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -19,6 +20,8 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+#bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+#set-option -sg escape-time 10
 
 source /usr/share/powerline/bindings/tmux/powerline.conf
