--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,7 @@ set -g mouse on
 set-window-option -g xterm-keys on
 #set -g default-terminal "xterm"
 set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ',screen-256color:Tc'
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
@@ -22,6 +23,6 @@ bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 #bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-#set-option -sg escape-time 10
+set-option -sg escape-time 300
 
 source /usr/share/powerline/bindings/tmux/powerline.conf
