--- a/tmux.conf
+++ b/tmux.conf
@@ -24,5 +24,6 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 #bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 set-option -sg escape-time 300
+set-option -g history-limit 50000
 
 source /usr/share/powerline/bindings/tmux/powerline.conf
